fixed animation on mobile menu

--- a/style/less/header.less
+++ b/style/less/header.less
@@ -15,21 +15,25 @@ body {
 .fontface(Ubuntu Bold, Ubuntu Bold);
 
 .mobile-navigation {
+  display: none;
   opacity: 0;
   transition: 1s;
-  z-index: 5;
   position: absolute;
 
   .mobile-new({ opacity: 0; width: 100%; height: 223px; position: absolute; });
 }
 
-.show-nav {
-  opacity: 1;
-  transition: 1s;
+.add-nav{
+  display:block;
   z-index: 6;
   width: 100%;
   height: 223px;
   position: fixed;
+}
+
+.show-nav {
+  opacity: 1;
+  transition: 1s;
 }
 
 .mobile__nav {
