--- a/style/main.css
+++ b/style/main.css
@@ -164,9 +164,9 @@ body {
   src: url('../fonts/Ubuntu Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Ubuntu Bold.woff2') format('woff2'), url('../fonts/Ubuntu Bold.woff') format('woff'), url('../fonts/Ubuntu Bold.ttf') format('truetype'), url('../fonts/Ubuntu Bold.svg#Ubuntu Bold') format('svg');
 }
 .mobile-navigation {
+  display: none;
   opacity: 0;
   transition: 1s;
-  z-index: 5;
   position: absolute;
 }
 @media (max-width: 639px) {
@@ -177,13 +177,16 @@ body {
     position: absolute;
   }
 }
-.show-nav {
-  opacity: 1;
-  transition: 1s;
+.add-nav {
+  display: block;
   z-index: 6;
   width: 100%;
   height: 223px;
   position: fixed;
+}
+.show-nav {
+  opacity: 1;
+  transition: 1s;
 }
 @media (max-width: 639px) {
   .mobile__nav {
